--- a/LangHelper/LangHelper.csproj
+++ b/LangHelper/LangHelper.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DeepL.net" Version="1.14.0" />
       <PackageReference Include="System.Text.Json" Version="9.0.3" />
     </ItemGroup>
 
